src/test/ui/traits/trait-test-2.stderr
error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/trait-test-2.rs:9:14
   |
LL |     10.dup::<i32>();
   |              ^^^ unexpected type argument

error[E0107]: wrong number of type arguments: expected 1, found 2
  --> $DIR/trait-test-2.rs:10:20
   |
LL |     10.blah::<i32, i32>();
   |                    ^^^ unexpected type argument

error[E0038]: the trait `bar` cannot be made into an object
  --> $DIR/trait-test-2.rs:11:16
   |
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
LL |     (box 10 as Box<dyn bar>).dup();
   |                ^^^^^^^^^^^^ the trait `bar` cannot be made into an object
   |
   = note: method `dup` references the `Self` type in its arguments or return type
   = note: method `blah` has generic type parameters
=======
LL | trait bar { fn dup(&self) -> Self; fn blah<X>(&self); }
   |                ---                    ---- method `blah` has generic type parameters
   |                |
   |                method `dup` references the `Self` type in its parameters or return type
...
LL |     (box 10 as Box<dyn bar>).dup();
   |                ^^^^^^^^^^^^ the trait `bar` cannot be made into an object
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error[E0038]: the trait `bar` cannot be made into an object
  --> $DIR/trait-test-2.rs:11:6
   |
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
=======
LL | trait bar { fn dup(&self) -> Self; fn blah<X>(&self); }
   |                ---                    ---- method `blah` has generic type parameters
   |                |
   |                method `dup` references the `Self` type in its parameters or return type
...
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
LL |     (box 10 as Box<dyn bar>).dup();
   |      ^^^^^^ the trait `bar` cannot be made into an object
   |
   = note: required because of the requirements on the impl of `std::ops::CoerceUnsized<std::boxed::Box<dyn bar>>` for `std::boxed::Box<{integer}>`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0038, E0107.
For more information about an error, try `rustc --explain E0038`.
